Refactored GetFeature + added support for WFS 2.0.0 GetFeature, GetPropertyValue